# spectre-chess

./: .gitignore  CMakeLists.txt
.github/workflows/: build.yml
config/: spectre_chess_config.h.in
inc/uci/: interface.h
source/config/: spectre_chess_config.hpp.in
source/lifecycle/inc/spectre/: lifecycle.hpp
source/lifecycle/src/: lifecycle.cpp  main.cpp
source/uci/inc/spectre/: interface.h  uci.hpp
source/uci/src/: interface.cpp  uci.cpp
src/: main.cpp
src/uci/: interface.cpp
